// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end-end-tests fails when breaking param change 1`] = `
Array [
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 67,
      "endPosition": 3344,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-breaking-param-change.yaml",
      "preview": "",
      "startLine": 43,
      "startPosition": 1898,
    },
    "where": "updated operation: GET /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 42,
      "endPosition": 1893,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-breaking-param-change.yaml",
      "preview": "",
      "startLine": 17,
      "startPosition": 387,
    },
    "where": "updated operation: POST /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 99,
      "endPosition": 4974,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-breaking-param-change.yaml",
      "preview": "",
      "startLine": 69,
      "startPosition": 3370,
    },
    "where": "updated operation: GET /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 127,
      "endPosition": 6623,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-breaking-param-change.yaml",
      "preview": "",
      "startLine": 100,
      "startPosition": 4979,
    },
    "where": "updated operation: PATCH /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 143,
      "endPosition": 7402,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-breaking-param-change.yaml",
      "preview": "",
      "startLine": 128,
      "startPosition": 6628,
    },
    "where": "updated operation: DELETE /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "error": "expected true to be false",
    "isMust": true,
    "isShould": false,
    "passed": false,
    "sourcemap": Object {
      "endLine": 81,
      "endPosition": 3732,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-breaking-param-change.yaml",
      "preview": "",
      "startLine": 77,
      "startPosition": 3632,
    },
    "where": "added query-parameter: org_id",
  },
]
`;

exports[`end-end-tests fails when operation is removed 1`] = `
Array [
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 66,
      "endPosition": 3336,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-operation-removed.yaml",
      "preview": "",
      "startLine": 42,
      "startPosition": 1890,
    },
    "where": "updated operation: GET /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 41,
      "endPosition": 1885,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-operation-removed.yaml",
      "preview": "",
      "startLine": 16,
      "startPosition": 379,
    },
    "where": "updated operation: POST /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 93,
      "endPosition": 4855,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-operation-removed.yaml",
      "preview": "",
      "startLine": 68,
      "startPosition": 3362,
    },
    "where": "updated operation: GET /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 109,
      "endPosition": 5634,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-fail-operation-removed.yaml",
      "preview": "",
      "startLine": 94,
      "startPosition": 4860,
    },
    "where": "updated operation: DELETE /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "not be allowed",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "error": "expected operation to be present",
    "isMust": true,
    "isShould": false,
    "passed": false,
    "sourcemap": Object {
      "filePath": undefined,
      "preview": "",
    },
    "where": "removed operation: PATCH /thing/{thing_id}",
  },
]
`;

exports[`end-end-tests passes when property field added to response 1`] = `
Array [
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 66,
      "endPosition": 3339,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 42,
      "startPosition": 1893,
    },
    "where": "updated operation: GET /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 41,
      "endPosition": 1888,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 16,
      "startPosition": 382,
    },
    "where": "updated operation: POST /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 93,
      "endPosition": 4858,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 68,
      "startPosition": 3365,
    },
    "where": "updated operation: GET /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 121,
      "endPosition": 6507,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 94,
      "startPosition": 4863,
    },
    "where": "updated operation: PATCH /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 137,
      "endPosition": 7286,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 122,
      "startPosition": 6512,
    },
    "where": "updated operation: DELETE /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 212,
      "endPosition": 9799,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 209,
      "startPosition": 9646,
    },
    "where": "added field: strangeness",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 212,
      "endPosition": 9799,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 209,
      "startPosition": 9646,
    },
    "where": "added field: strangeness",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 212,
      "endPosition": 9799,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 209,
      "startPosition": 9646,
    },
    "where": "added field: strangeness",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 212,
      "endPosition": 9799,
      "filePath": "/api-standards/resources/thing/2021-11-10/001-ok-add-property-field.yaml",
      "preview": "",
      "startLine": 209,
      "startPosition": 9646,
    },
    "where": "added field: strangeness",
  },
]
`;

exports[`end-end-tests passes when property operation added 1`] = `
Array [
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 66,
      "endPosition": 3312,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 42,
      "startPosition": 1866,
    },
    "where": "updated operation: GET /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 41,
      "endPosition": 1861,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 16,
      "startPosition": 355,
    },
    "where": "updated operation: POST /thing",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 115,
      "endPosition": 5740,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 90,
      "startPosition": 4247,
    },
    "where": "updated operation: GET /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 143,
      "endPosition": 7389,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 116,
      "startPosition": 5745,
    },
    "where": "updated operation: PATCH /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "have consistent operation IDs",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 159,
      "endPosition": 8168,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 144,
      "startPosition": 7394,
    },
    "where": "updated operation: DELETE /thing/{thing_id}",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "error": "expected true to be false",
    "isMust": true,
    "isShould": false,
    "passed": false,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 156,
      "filePath": "/api-standards/components/parameters/version.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added query-parameter: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "error": "expected true to be false",
    "isMust": true,
    "isShould": false,
    "passed": false,
    "sourcemap": Object {
      "endLine": 80,
      "endPosition": 3707,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 74,
      "startPosition": 3559,
    },
    "where": "added query-parameter: thing_ids",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 233,
      "endPosition": 10659,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 231,
      "startPosition": 10528,
    },
    "where": "added field: strangeness",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 233,
      "endPosition": 10659,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 231,
      "startPosition": 10528,
    },
    "where": "added field: strangeness",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 123,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added field: jsonapi",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 5,
      "endPosition": 69,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 4,
      "startPosition": 42,
    },
    "where": "added field: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 8,
      "endPosition": 172,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 5,
      "startPosition": 96,
    },
    "where": "added field: errors",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 17,
      "endPosition": 320,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 15,
      "startPosition": 279,
    },
    "where": "added field: id",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 19,
      "endPosition": 351,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 18,
      "startPosition": 325,
    },
    "where": "added field: status",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 21,
      "endPosition": 382,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 20,
      "startPosition": 356,
    },
    "where": "added field: detail",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 29,
      "endPosition": 547,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 22,
      "startPosition": 387,
    },
    "where": "added field: source",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 26,
      "endPosition": 471,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 25,
      "startPosition": 440,
    },
    "where": "added field: pointer",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 28,
      "endPosition": 513,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 27,
      "startPosition": 480,
    },
    "where": "added field: parameter",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 32,
      "endPosition": 609,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 30,
      "startPosition": 552,
    },
    "where": "added field: meta",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 123,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added field: jsonapi",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 5,
      "endPosition": 69,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 4,
      "startPosition": 42,
    },
    "where": "added field: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 8,
      "endPosition": 172,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 5,
      "startPosition": 96,
    },
    "where": "added field: errors",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 17,
      "endPosition": 320,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 15,
      "startPosition": 279,
    },
    "where": "added field: id",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 19,
      "endPosition": 351,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 18,
      "startPosition": 325,
    },
    "where": "added field: status",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 21,
      "endPosition": 382,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 20,
      "startPosition": 356,
    },
    "where": "added field: detail",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 29,
      "endPosition": 547,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 22,
      "startPosition": 387,
    },
    "where": "added field: source",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 26,
      "endPosition": 471,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 25,
      "startPosition": 440,
    },
    "where": "added field: pointer",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 28,
      "endPosition": 513,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 27,
      "startPosition": 480,
    },
    "where": "added field: parameter",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 32,
      "endPosition": 609,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 30,
      "startPosition": 552,
    },
    "where": "added field: meta",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 123,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added field: jsonapi",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 5,
      "endPosition": 69,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 4,
      "startPosition": 42,
    },
    "where": "added field: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 8,
      "endPosition": 172,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 5,
      "startPosition": 96,
    },
    "where": "added field: errors",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 17,
      "endPosition": 320,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 15,
      "startPosition": 279,
    },
    "where": "added field: id",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 19,
      "endPosition": 351,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 18,
      "startPosition": 325,
    },
    "where": "added field: status",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 21,
      "endPosition": 382,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 20,
      "startPosition": 356,
    },
    "where": "added field: detail",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 29,
      "endPosition": 547,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 22,
      "startPosition": 387,
    },
    "where": "added field: source",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 26,
      "endPosition": 471,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 25,
      "startPosition": 440,
    },
    "where": "added field: pointer",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 28,
      "endPosition": 513,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 27,
      "startPosition": 480,
    },
    "where": "added field: parameter",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 32,
      "endPosition": 609,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 30,
      "startPosition": 552,
    },
    "where": "added field: meta",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 123,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added field: jsonapi",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 5,
      "endPosition": 69,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 4,
      "startPosition": 42,
    },
    "where": "added field: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 8,
      "endPosition": 172,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 5,
      "startPosition": 96,
    },
    "where": "added field: errors",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 17,
      "endPosition": 320,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 15,
      "startPosition": 279,
    },
    "where": "added field: id",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 19,
      "endPosition": 351,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 18,
      "startPosition": 325,
    },
    "where": "added field: status",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 21,
      "endPosition": 382,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 20,
      "startPosition": 356,
    },
    "where": "added field: detail",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 29,
      "endPosition": 547,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 22,
      "startPosition": 387,
    },
    "where": "added field: source",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 26,
      "endPosition": 471,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 25,
      "startPosition": 440,
    },
    "where": "added field: pointer",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 28,
      "endPosition": 513,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 27,
      "startPosition": 480,
    },
    "where": "added field: parameter",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 32,
      "endPosition": 609,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 30,
      "startPosition": 552,
    },
    "where": "added field: meta",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 123,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added field: jsonapi",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 5,
      "endPosition": 69,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 4,
      "startPosition": 42,
    },
    "where": "added field: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 8,
      "endPosition": 172,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 5,
      "startPosition": 96,
    },
    "where": "added field: errors",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 17,
      "endPosition": 320,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 15,
      "startPosition": 279,
    },
    "where": "added field: id",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 19,
      "endPosition": 351,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 18,
      "startPosition": 325,
    },
    "where": "added field: status",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 21,
      "endPosition": 382,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 20,
      "startPosition": 356,
    },
    "where": "added field: detail",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 29,
      "endPosition": 547,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 22,
      "startPosition": 387,
    },
    "where": "added field: source",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 26,
      "endPosition": 471,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 25,
      "startPosition": 440,
    },
    "where": "added field: pointer",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 28,
      "endPosition": 513,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 27,
      "startPosition": 480,
    },
    "where": "added field: parameter",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 32,
      "endPosition": 609,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 30,
      "startPosition": 552,
    },
    "where": "added field: meta",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 7,
      "endPosition": 123,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 1,
      "startPosition": 0,
    },
    "where": "added field: jsonapi",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 5,
      "endPosition": 69,
      "filePath": "/api-standards/components/common.yaml",
      "preview": "",
      "startLine": 4,
      "startPosition": 42,
    },
    "where": "added field: version",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 8,
      "endPosition": 172,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 5,
      "startPosition": 96,
    },
    "where": "added field: errors",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 17,
      "endPosition": 320,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 15,
      "startPosition": 279,
    },
    "where": "added field: id",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 19,
      "endPosition": 351,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 18,
      "startPosition": 325,
    },
    "where": "added field: status",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 21,
      "endPosition": 382,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 20,
      "startPosition": 356,
    },
    "where": "added field: detail",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 29,
      "endPosition": 547,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 22,
      "startPosition": 387,
    },
    "where": "added field: source",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 26,
      "endPosition": 471,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 25,
      "startPosition": 440,
    },
    "where": "added field: pointer",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 28,
      "endPosition": 513,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 27,
      "startPosition": 480,
    },
    "where": "added field: parameter",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 32,
      "endPosition": 609,
      "filePath": "/api-standards/components/errors.yaml",
      "preview": "",
      "startLine": 30,
      "startPosition": 552,
    },
    "where": "added field: meta",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 233,
      "endPosition": 10659,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 231,
      "startPosition": 10528,
    },
    "where": "added field: strangeness",
  },
  Object {
    "change": null,
    "condition": "not be required",
    "docsLink": undefined,
    "effectiveOnDate": undefined,
    "isMust": true,
    "isShould": false,
    "passed": true,
    "sourcemap": Object {
      "endLine": 233,
      "endPosition": 10659,
      "filePath": "/api-standards/resources/thing/2021-11-10/002-ok-add-operation.yaml",
      "preview": "",
      "startLine": 231,
      "startPosition": 10528,
    },
    "where": "added field: strangeness",
  },
]
`;
